<resources>
    <string name="app_name">BLOODCARE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="thamasha_sewmini">Thamasha Sewmini</string>
    <string name="blood_drop_is_ab">Blood Drop is AB+</string>
    <string name="todo">TODO</string>
    <string name="_947_7_141_78_69">+947 7 141 78 69</string>
    <string name="no_215_gamagewaththa_galle">No 215,Gamagewaththa, Galle</string>
    <string name="best_donor_in_galle_district">Best donor in Galle District</string>
    <string name="blood_drop_is_a">Blood Drop is A-</string>
    <string name="_947_0_145_52_65">+947 0 145 52 65</string>
    <string name="n0_250_kekirideniya_lane_hewagama_kaduwela">N0 250,Kekirideniya Lane, Hewagama, Kaduwela</string>
    <string name="best_donor_in_colombo_district">Best donor in Colombo District</string>
    <string name="kaveesha_nethmi">Kaveesha Nethmi</string>
    <string name="blood_drop_is_o">Blood Drop is O-</string>
    <string name="_947_0_141_53_65">+947 0 141 53 65</string>
    <string name="no_234_akkara_500_embilipitiya">No 234,Akkara 500,Embilipitiya</string>
    <string name="best_donor_in_rathnapura_district">Best donor in Rathnapura District</string>
    <string name="senesh_sathsara">Senesh Sathsara</string>
    <string name="blood_donors_in_sri_lanka">Blood Donors in Sri Lanka</string>
    <string name="division">Division</string>
    <string name="de_silva_rd_dehiwala_mount_lavinia_sri_lakna">De Silva Rd, Dehiwala-Mount Lavinia, Sri lakna</string>
    <string name="sri_lanka_blood_banks">Sri Lanka Blood Banks</string>
    <string name="blood_bank">Blood Bank</string>
    <string name="blood_and_plasma_donation_center">Blood and plasma donation center</string>
    <string name="_94112_763_262">+94112 763 262</string>
    <string name="descrip">National Blood Transfusion Service (NBTS) Sri Lanka is a special campaign under the ministry of health. It has a unique role providing timely supply of quality assured blood and blood components and related laboratory, clinical, academic and research services for the entire...</string>
    <string name="general_hospital">General Hospital</string>
    <string name="divitional_hospital">Divitional Hospital</string>
    <string name="naveen_kodikara">Naveen Kodikara</string>
    <string name="blood_donor_in_rathnapura_district">Blood Donor in Rathnapura District</string>
    <string name="d_r_mala">D.R.Mala</string>
    <string name="g_n_k_premarathna">G.N.K.Premarathna</string>
    <string name="hasadara_sandamini">Hasadara Sandamini</string>
    <string name="hemal_jayasingha">Hemal Jayasingha</string>
    <string name="settings">Settings</string>
    <string name="sudaraka_madushan">Jimmy Frenando</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="night_mode">Night Mode</string>
    <string name="notification">Notification</string>
    <string name="security">Security</string>
    <string name="message_and_support">Message and Support</string>
    <string name="text_size">Text Size</string>
    <string name="language">Language</string>
    <string name="log_out">Log Out</string>
    <string name="hello_sudaraka">Hello Jimmy</string>
    <string name="in_the_year">(in the year)</string>
    <string name="_2_donation">12 Donation</string>
    <string name="your_donations">Your Donations</string>
    <string name="your_last_donation">Your Last Donation</string>
    <string name="_8_units">+8 Units</string>
    <string name="platelet">Platelet</string>
    <string name="in_generala_hospital_colombo">In, Generala Hospital Colombo</string>
    <string name="wednesday_march_6_2024">Wednesday,March 6, 2024</string>
    <string name="you_have_successfully_registered_as_a_blood_donor">You have successfully registered as a blood donor.</string>
    <string name="before_you_start_check_you_are_eligible">Before you start,check you are eligible:</string>
    <string name="you_are_fit_and_healthy">You are fit and healthy ,</string>
    <string name="if_you_are_the_blood_donator">If you are the blood donator,</string>
</resources>