<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/liner_back"
    tools:context=".MainActivity">



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="14dp"
                android:src="@drawable/baseline_arrow_back_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/settings"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/men"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_marginStart="130dp"
                    android:text="@string/sudaraka_madushan"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="20sp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/bottom_background"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/edit_profile"
                    android:id="@+id/setting_edit"
                    android:textAllCaps="false" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/button_bg_color"
                    android:orientation="vertical">

                    <!--Dark mode-->
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:padding="14dp"
                            android:src="@drawable/nightmode" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="70dp"
                            android:text="@string/night_mode"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            tools:ignore="RelativeOverlap" />

                        <Switch
                            android:id="@+id/switchMode"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:paddingEnd="10dp"
                            android:switchMinWidth="50dp"
                            android:theme="@style/settingSwitch"
                            tools:ignore="RtlSymmetry,UseSwitchCompatOrMaterialXml" />

                    </RelativeLayout>

                    <!--Notification -->
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:padding="14dp"
                            android:src="@drawable/notifi" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="70dp"
                            android:text="@string/notification"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            tools:ignore="RelativeOverlap" />

                        <Switch
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:paddingEnd="10dp"
                            android:switchMinWidth="50dp"
                            android:theme="@style/settingSwitch"
                            tools:ignore="RtlSymmetry,UseSwitchCompatOrMaterialXml" />

                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/button_bg_color"
                    android:orientation="vertical">

                    <!--security-->
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:padding="14dp"
                            android:src="@drawable/security" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="70dp"
                            android:text="@string/security"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            tools:ignore="RelativeOverlap" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:paddingEnd="20dp"
                            android:src="@drawable/baseline_keyboard_arrow_right_24"
                            tools:ignore="RtlSymmetry" />
                    </RelativeLayout>

                    <!--support-->
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:padding="14dp"
                            android:src="@drawable/support" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="70dp"
                            android:text="@string/message_and_support"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            tools:ignore="RelativeOverlap" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/baseline_keyboard_arrow_right_24"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:paddingEnd="20dp"
                            tools:ignore="RtlSymmetry" />
                    </RelativeLayout>

                    <!--Text Size-->
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:padding="14dp"
                            android:src="@drawable/textsize" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="70dp"
                            android:text="@string/text_size"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            tools:ignore="RelativeOverlap" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/baseline_keyboard_arrow_right_24"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:paddingEnd="20dp"
                            tools:ignore="RtlSymmetry" />
                    </RelativeLayout>

                    <!--language-->
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:padding="14dp"
                            android:src="@drawable/language" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="70dp"
                            android:text="@string/language"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            tools:ignore="RelativeOverlap" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/baseline_keyboard_arrow_right_24"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:paddingEnd="20dp"
                            tools:ignore="RtlSymmetry" />
                    </RelativeLayout>
                </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/button_bg_color"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="UselessParent">

                    <ImageView
                        android:id="@+id/logout"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:padding="14dp"
                        android:src="@drawable/logout" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="70dp"
                        android:text="@string/log_out"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                </RelativeLayout>
            </LinearLayout>
            </LinearLayout>
        </ScrollView>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/bottom_background"
        android:elevation="2dp"
        app:itemIconSize="30dp"
        app:itemIconTint="@drawable/item_selector"
        app:itemRippleColor="@android:color/transparent"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/bottom_menu" />
</RelativeLayout>